[package]
name = "audio"
version = "0.1.0"
edition = "2021"
authors = ["Edgar Bermejo <eledgaar@gmail.com>"]
description = "Playing with an FM Oscillator."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
]