[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Edgar Bermejo <eledgaar@gmail.com>"]
description = "A Rust Wasm hello world example."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html